--- a/templates/form.html
+++ b/templates/form.html
@@ -75,7 +75,7 @@
         <form method="GET" action="/predict" enctype="multipart/form-data">
             <fieldset>
                 <center>
-                    <h1>Enter the details</h1>
+                    <h1>Team 12 - House Price Prediction</h1>
                 <label for="areaincome">Avg. Area Income</label>
                 <input type="number" step="0.001" id="areaincome" name="areaincome" placeholder="Avg. Area Income" required>
                 <label for="areahouseage">Avg. Area House Age</label>
